--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,4 @@
-/* If window is smaller than 821px, display the HKN logo only */
+/* If window is smaller than 821px, display the logo only */
 @media screen and (max-width: 750px) {
     .navbar li a {
         display: none;
@@ -8,6 +8,7 @@
 	    position: absolute;
 	    width: 200px !important;
 	    left: 35% !important;
+	    top: 30% !important;
 	    padding: 0;
 		width:auto;
 	    vertical-align: middle;
@@ -23,6 +24,7 @@
 
 /* Fonts */
 @import url(https://fonts.googleapis.com/css?family=Lato:400,300,100);
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,200);
 
 @font-face {
     font-family: "CG Omega";
@@ -31,8 +33,9 @@
 
 @font-face {
     font-family: "Helvatica Neue";
-    src: url("app/assets/fonts/helvetica-neue.ttf");
+    src: url("app/assets/fonts/helvatica-neue.woff");
 }
+
 /* Primary style */
 *, *::after, *::before {
   box-sizing: border-box;
@@ -78,7 +81,7 @@ em {
 /* Nav bar */
 #logo {
 	position: absolute;
-	top: 8%;
+	top: 10%;
 	left: 4%;
 }
 .navbar {
@@ -217,10 +220,11 @@ nav.social a:nth-child(4) {
     margin-right: -50%;
     transform: translate(-50%, -50%);
     z-index: 10;
+	font-family: 'Helvetica Neue', 'Open Sans Pro', Helvetica, sans-serif;
 }
 
 #clock {
-    font-family: 'Helvetica Neue', sans-serif;
+	font-family: 'Helvetica Neue', 'Open Sans Pro', Helvetica, sans-serif;
     font-weight: 200;
     text-align: center;
     color: #fff;
@@ -239,8 +243,7 @@ nav.social a:nth-child(4) {
 
 .calendar {
     position: absolute;
-    font-family: 'Helvetica Neue', sans-serif;
-    font-weight: 200;
+    font-weight: 300;
     text-align: center;
     color: #e2dede;
     font-size: 20px;
@@ -305,7 +308,7 @@ nav.social a:nth-child(4) {
 .weather-app {
   display: none;
   position: absolute;
-  font-family: 'Helvetica Neue';
+  font-family: 'Helvetica Neue', 'Century Gothic', Helvetica, sans-serif;
   font-weight: 200;
   margin: 0;
   color: #fff;
@@ -1101,9 +1104,9 @@ svg {
   content: '';
   position: absolute;
   height: 100%;
-  width: 12px;
+  width: 28px;
   left: 50%;
-  top: 80%;
+  top: 72%;
   bottom: auto;
   right: auto;
   -webkit-transform: translateX(-50%) translateY(-50%);
@@ -1111,16 +1114,16 @@ svg {
   -ms-transform: translateX(-50%) translateY(-50%);
   -o-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
-  background: image-url('cd-arrowright.svg') no-repeat;  
+  background: image-url('cd-arrowright1.svg') no-repeat;  
   background-size: 100%
 }
 .cd-timeline-navigation a.prev {
   left: 0;
-  -webkit-transform: translateY(-53%) rotate(180deg);
-  -moz-transform: translateY(-53%) rotate(180deg);
-  -ms-transform: translateY(-53%) rotate(180deg);
-  -o-transform: translateY(-53%) rotate(180deg);
-  transform: translateY(-53%) rotate(180deg);
+  -webkit-transform: translateY(-50%) rotate(180deg);
+  -moz-transform: translateY(-50%) rotate(180deg);
+  -ms-transform: translateY(-50%) rotate(180deg);
+  -o-transform: translateY(-50%) rotate(180deg);
+  transform: translateY(-50%) rotate(180deg);
 }
 .cd-timeline-navigation a.next {
   right: 0;
@@ -1195,9 +1198,9 @@ svg {
 .cd-horizontal-timeline .events-content h2 {
   font-weight: 300;
   font-size: 3rem;
-  -webkit-font-size: 300;
-  -moz-font-size: 300;
-  -ms-font-size: 300;
+  -webkit-font-weight: 300;
+  -moz-font-weight: 300;
+  -ms-font-weight: 300;
   -moz-font-family: 'Lato', sans-serif;
   font-family: 'Lato', serif;
   line-height: 1.2;
