--- a/app/views/kfaninc/about.html.erb
+++ b/app/views/kfaninc/about.html.erb
@@ -32,10 +32,10 @@
   <div class="list-switcher_select chunk">
 				<div class="control-group">
 					<label for="panel-category">Specialized in...</label>
-					<select id="panel-category" class="demo-default" placeholder="Select an area you're interested in...">
-					    <option value="value1">Value 1</option>
-					    <option value="value2">Value 2</option>
-					    <option value="value3">Value 3</option>
+					<select id="panel-category" class="demo-default" onchange="loadSelection()" placeholder="Select an area you're interested in...">
+					    <option value="#">Value 1</option>
+					    <option value="#">Value 2</option>
+					    <option value="#">Value 3</option>
 					</select>
 				</div>
 </div>
