Added graphic designs

--- a/app/views/kfaninc/about.html.erb
+++ b/app/views/kfaninc/about.html.erb
@@ -42,7 +42,7 @@
 </div>
 <%= javascript_include_tag "selectize", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "about", "data-turbolinks-track" => true %>
-<%= javascript_include_tag "clock", "data-turbolinks-track" => true %>
-<%= javascript_include_tag "home", "data-turbolinks-track" => true %>
+<%= javascript_include_tag "contact", "data-turbolinks-track" => true %>
+<%= javascript_include_tag "utilities", "data-turbolinks-track" => true %>
 </body>
 </html>
