--- a/app/views/kfaninc/home.html.erb
+++ b/app/views/kfaninc/home.html.erb
@@ -154,7 +154,8 @@ Thanks for writing.  It was good to hear from you!
 		</ol>
 	</div>
 </section>
-<%= javascript_include_tag "clock", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "home", "data-turbolinks-track" => true %>
+<%= javascript_include_tag "contact", "data-turbolinks-track" => true %>
+<%= javascript_include_tag "utilities", "data-turbolinks-track" => true %>
 </body>
 </html>
