--- a/app/views/kfaninc/map.html.erb
+++ b/app/views/kfaninc/map.html.erb
@@ -288,7 +288,7 @@
 
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCdKge6UcNySGaO8Y5kchHe_gY-dlgXekE&callback=initMap" async defer></script>
-<%= javascript_include_tag "clock", "data-turbolinks-track" => true %>
-<%= javascript_include_tag "home", "data-turbolinks-track" => true %>
+<%= javascript_include_tag "contact", "data-turbolinks-track" => true %>
+<%= javascript_include_tag "utilities", "data-turbolinks-track" => true %>
 </body>
 </html>
