Added ui/ux page

--- a/app/views/kfaninc/uiux.html.erb
+++ b/app/views/kfaninc/uiux.html.erb
@@ -18,20 +18,59 @@
 		<div id="slider-wrapper">
 			<ul id="image_slider">
             <li class="graghics">
-              <div id="itemOne">
-	    		<h3>Graphical Design</h3>
-				<p>Posters Designed for UCLA IEEE - Eta Kappa Nu (HKN)</p>
+              <div class="narrative">
+	    		<h3>UI / UX</h3>
+				<p>All of these have been turned into reality. I believe physical objects can render user experience better than anything else. The beauty of design is highlighted at the first sight of unpackaging</p>
+    		  </div>
+    		</li>
+			<li class="graghics">
+              <div class="narrative">
+	    		<h3>// Badge</h3>
+				<p>Officer badge designed for UCLA IEEE - Eta Kappa Nu. Simple gradient that fits into almost everything</p>
     		  </div>
     		</li>
             <li class="graghics">
-            	<%= image_tag "slider/HKN_HonorMix1.jpg" %>
+            	<%= image_tag "slider/HKN_Badge.jpg" %>
             </li>
+            <li>
+              <div class="narrative">
+	    		<h3>// T-shirt </h3>
+				<p>Numbers are always endowed with special meanings. Black and blue resemble the belt colors in martial arts</p>
+    		  </div>
+    		</li>
+    		<li class="graghics">
+    		  <div id="tshirt">
+            	<%= image_tag "slider/HKN_Tshirt.jpg", :id => "overlay"%>
+    		  </div>
+            </li>
+			<li>
+              <div class="narrative">
+	    		<h3>// Business Card</h3>
+				<p>Produced with recycled paper, the joy of engineering is protecting</p>
+    		  </div>
+    		</li>
             <li class="graghics">
-            	<%= image_tag "slider/HKN_HonorMix1.jpg" %>
+            	<%= image_tag "slider/HKN_BusinessCard.pdf" %>
             </li>
+            <li>
+              <div class="narrative">
+	    		<h3>// Pin</h3>
+				<p>HKN Gold Award for people that ponder about improving themselves every single day and serving the EE community</p>
+    		  </div>
+    		</li>
             <li class="graghics">
-            	<%= image_tag "slider/HKN_HonorMix1.jpg" %>
+            	<%= image_tag "slider/HKN_Gold.jpg" %>
             </li>
+            <li>
+              <div class="narrative">
+	    		<h3>// Bulletin</h3>
+				<p>HKN bulletin for the UCLA EE department Annual Research Review. Started with chaos, finished with chaos and most information because people can only grab one piece of information from the board</p>
+    		  </div>
+    		</li>
+            <li class="graghics" id="bulletin">
+            	<%= image_tag "slider/HKN_ARP.jpg" %>
+            </li>
+           
 
         </ul>
 		</div>
@@ -45,6 +84,13 @@
         <li class="itemLinks" data-pos="-700px"></li>
         <li class="itemLinks" data-pos="-1400px"></li>
         <li class="itemLinks" data-pos="-2100px"></li>
+        <li class="itemLinks" data-pos="-2800px"></li>
+        <li class="itemLinks" data-pos="-3500px"></li>
+        <li class="itemLinks" data-pos="-4200px"></li>
+        <li class="itemLinks" data-pos="-4900px"></li>
+        <li class="itemLinks" data-pos="-5600px"></li>
+        <li class="itemLinks" data-pos="-6300px"></li>
+        <li class="itemLinks" data-pos="-7000px"></li>
       </ul>
       <a href="#" id="slider-next" class="itemControl">next</li>
 	</div>
