Initialize blog page

--- a/app/views/kfaninc/home.html.erb
+++ b/app/views/kfaninc/home.html.erb
@@ -145,7 +145,7 @@ Thanks for writing.  It was good to hear from you!
 				<h2>Change of Major</h2>
 				<em>January 23rd, 2015</em>
 				<p>	
-					The date that totally changed the course of my life
+					The day that totally changed the course of my life
 				<br></br>
 				<p>Major: Electrical Engineering</p>
 				<p>Minor: Italian</p>	
