--- a/app/views/kfaninc/map.html.erb
+++ b/app/views/kfaninc/map.html.erb
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<%= stylesheet_link_tag "custom", media: "all", "data-turbolinks-track" => true %>  
 	<%= javascript_include_tag "modernizr.js", "data-turbolinks-track" => true %>
-	<title>About | KFanInc</title>
+	<title>Map | KFanInc</title>
 	<style>
       html, body {
         height: 100%;
