--- a/app/views/kfaninc/uiux.html.erb
+++ b/app/views/kfaninc/uiux.html.erb
@@ -50,7 +50,7 @@
     		  </div>
     		</li>
             <li class="graghics">
-            	<%= image_tag "slider/HKN_BusinessCard.pdf" %>
+            	<%= image_tag "slider/HKN_BusinessCard.jpg" %>
             </li>
             <li>
               <div class="narrative">
