--- a/app/views/kfaninc/about.html.erb
+++ b/app/views/kfaninc/about.html.erb
@@ -6,7 +6,7 @@
 	<%= stylesheet_link_tag "custom", media: "all", "data-turbolinks-track" => true %>  
 	<%= stylesheet_link_tag "https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.1/css/selectize.css" %> 
 	<%= javascript_include_tag "modernizr.js", "data-turbolinks-track" => true %> 
-	<title>About | KFanInc</title>
+	<% @title = "KFan > About" %></head>
 </head>
 <body>
 <div id="overlay-contact"></div>
