--- a/app/views/kfaninc/graphics.html.erb
+++ b/app/views/kfaninc/graphics.html.erb
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<%= stylesheet_link_tag "custom", media: "all", "data-turbolinks-track" => true %>  
 	<%= javascript_include_tag "modernizr.js", "data-turbolinks-track" => true %> 
-	<title>Design | KFanInc</title>
+	<% @title = "KFan > About > Design" %></head>
 </head>
 <body>
 <div id="overlay-contact"></div>
