--- a/app/views/kfaninc/home.html.erb
+++ b/app/views/kfaninc/home.html.erb
@@ -7,7 +7,7 @@
 	<%= stylesheet_link_tag "reset", media: "all", "data-turbolinks-track" => true %>  	
 	<%= stylesheet_link_tag "custom", media: "all", "data-turbolinks-track" => true %>  
   	<%= javascript_include_tag "modernizr.js", "data-turbolinks-track" => true %>
-	<title>Home | KFanInc</title>
+	<% @title = "KFan" %></head>
 </head>
 <body>
 <div id="overlay-contact"></div>
