--- a/app/views/kfaninc/uiux.html.erb
+++ b/app/views/kfaninc/uiux.html.erb
@@ -11,6 +11,7 @@
 <div id="overlay-contact"></div>
 <div id="overlay-utilities"></div>
 <%= render 'layouts/header' %>
+<%= render 'layouts/nav' %>
 <%= render 'layouts/contact' %>
 <%= render 'layouts/utilities' %>
 
@@ -96,6 +97,7 @@
 	</div>
 
 <%= javascript_include_tag "work", "data-turbolinks-track" => true %>
+<%= javascript_include_tag "nav", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "contact", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "utilities", "data-turbolinks-track" => true %>
 
