--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,8 @@
 <ul class="navbar">
-<%= link_to image_tag("logo1.png", height: "45"), root_path, :id => "logo"%>
+<!-- <%= link_to image_tag("logo1.png", height: "45"), root_path, :id => "logo"%> -->
 <li><%= link_to "Home", root_path %></li>
-<li><%= link_to "About", about_path %></li>
-<li><a href="#" id="utilities">Utilities</a></li>
-<li><%= link_to "Map", map_path %></li>
+<li><%= link_to "Work", about_path %></li>
 <li><a href="#" id="contact">Contact</a></li>
 </ul>
+
+<div class=" id="sub-navbar"><%= link_to image_tag("expand2.svg", height: "37"), "#", :id => "draggable"%></div>
