--- a/app/views/kfaninc/about.html.erb
+++ b/app/views/kfaninc/about.html.erb
@@ -12,6 +12,7 @@
 <div id="overlay-contact"></div>
 <div id="overlay-utilities"></div>
 <%= render 'layouts/header' %>
+<%= render 'layouts/nav' %>
 <%= render 'layouts/contact' %>
 <%= render 'layouts/utilities' %>
 
@@ -42,6 +43,7 @@
 </div>
 <%= javascript_include_tag "selectize", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "about", "data-turbolinks-track" => true %>
+<%= javascript_include_tag "nav", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "contact", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "utilities", "data-turbolinks-track" => true %>
 </body>
