--- a/app/views/kfaninc/home.html.erb
+++ b/app/views/kfaninc/home.html.erb
@@ -13,6 +13,7 @@
 <div id="overlay-contact"></div>
 <div id="overlay-utilities"></div>
 <%= render 'layouts/header' %>
+<%= render 'layouts/nav' %>
 <%= render 'layouts/contact' %>
 <%= render 'layouts/utilities' %>
     
@@ -155,6 +156,7 @@ Thanks for writing.  It was good to hear from you!
 	</div>
 </section>
 <%= javascript_include_tag "home", "data-turbolinks-track" => true %>
+<%= javascript_include_tag "nav", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "contact", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "utilities", "data-turbolinks-track" => true %>
 </body>
