--- a/app/views/kfaninc/map.html.erb
+++ b/app/views/kfaninc/map.html.erb
@@ -35,6 +35,7 @@
 <div id="overlay-contact"></div>
 <div id="overlay-utilities"></div>
 <%= render 'layouts/header' %>
+<%= render 'layouts/nav' %>
 <%= render 'layouts/contact' %>
 <%= render 'layouts/utilities' %>
 	<h2>Listen...</h2>
@@ -288,6 +289,7 @@
 
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCdKge6UcNySGaO8Y5kchHe_gY-dlgXekE&callback=initMap" async defer></script>
+<%= javascript_include_tag "nav", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "contact", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "utilities", "data-turbolinks-track" => true %>
 </body>
