--- a/app/views/layouts/_header_white.html.erb
+++ b/app/views/layouts/_header_white.html.erb
@@ -1,7 +1,6 @@
 <ul class="navbar" id="navbar-white">
-<li><a href="#" id="utilities">Utilities</a></li>
 <li><a href="#" id="contact">Contact</a></li>
 <%= link_to image_tag("close.png", height: "30"), about_path, :id => "close"%>
-</div>
-
+<div class=" id="sub-navbar"><%= link_to image_tag("expand2-white.svg", height: "37"), "#", :id => "draggable"%></div>
 </ul>
+
