--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -25,4 +25,5 @@
   </ul>
 </div>
 
+<%= javascript_include_tag "jquery.ui.touch-punch.min.js" %>
 <%= javascript_include_tag "//code.jquery.com/ui/1.11.4/jquery-ui.js" %>
