--- a/app/views/kfaninc/graphics.html.erb
+++ b/app/views/kfaninc/graphics.html.erb
@@ -21,7 +21,7 @@
             <li class="graghics">
               <div class="narrative">
 	    		<h3>Graphical Design</h3>
-				<p>Posters Designed for UCLA IEEE - Eta Kappa Nu (HKN)</p>
+				<p>Selected posters designed for UCLA IEEE - Eta Kappa Nu (HKN)</p>
     		  </div>
     		</li>
 			<li class="graghics">
@@ -52,9 +52,6 @@
             	<%= image_tag "slider/HKN_HonorMix2.jpg" %>
             </li>
             <li class="graghics">
-            	<%= image_tag "slider/HKN_Matlab1.jpg" %>
-            </li>
-            <li class="graghics">
             	<%= image_tag "slider/HKN_Matlab1.1.jpg" %>
             </li>
             <li class="graghics">
@@ -69,17 +66,11 @@
 				<p>All natural elements of the earth: ocean, forrest, metal, and the concrete jungle we built to confine our soul</p>
     		  </div>
     		</li>
-            <li class="graghics" id="hkn_laurel">
-            	<%= image_tag "slider/HKN_Laurel.jpg" %>
-            </li>
             <li class="graghics">
             	<%= image_tag "slider/HKN_Week6.jpg" %>
             </li>
             <li class="graghics">
             	<%= image_tag "slider/HKN_Kayak.jpg" %>
-            </li>
-            <li class="graghics" id="hkn_5k">
-            	<%= image_tag "slider/HKN_5K.jpg" %>
             </li>
             <li class="graghics" id="hkn_cc">
             	<%= image_tag "slider/HKN_ChallengeCourse.jpg" %>
@@ -88,16 +79,10 @@
             	<%= image_tag "slider/MIP_insta.jpg" %>
             </li>
             <li class="graghics">
-            	<%= image_tag "slider/HKN_Frisbee.jpg" %>
-            </li>
-            <li class="graghics">
             	<%= image_tag "slider/BruinStartUp.jpg" %>
             </li>
             <li class="graghics">
             	<%= image_tag "slider/GraduatePanel(insta).jpg" %>
-            </li>
-            <li class="graghics">
-            	<%= image_tag "slider/HKN_TI.jpg" %>
             </li>
             <li>
               <div class="narrative">
@@ -125,9 +110,6 @@
     		</li>
             <li class="graghics">
             	<%= image_tag "slider/Townhall_insta.jpg" %>
-            </li>
-            <li class="graghics" id="hkn_ind">
-            	<%= image_tag "slider/HKN_Induction_fb.jpg" %>
             </li>
             <li class="graghics">
             	<%= image_tag "slider/HKN_Intel.jpg" %>
@@ -179,12 +161,6 @@
         <li class="itemLinks" data-pos="-17500px"></li>
         <li class="itemLinks" data-pos="-18200px"></li>
         <li class="itemLinks" data-pos="-18900px"></li>
-        <li class="itemLinks" data-pos="-19600px"></li>
-        <li class="itemLinks" data-pos="-20300px"></li>
-        <li class="itemLinks" data-pos="-21000px"></li>
-        <li class="itemLinks" data-pos="-21700px"></li>
-        <li class="itemLinks" data-pos="-22400px"></li>
-        <li class="itemLinks" data-pos="-23100px"></li>
       </ul>
       <a href="#" id="slider-next" class="itemControl">next</li>
 	</div>
