Minor fix of curriculum

--- a/app/views/kfaninc/ee.html.erb
+++ b/app/views/kfaninc/ee.html.erb
@@ -69,7 +69,7 @@
 	<li><p class="future-course"><span>Electrical Engineering 133A</span> — Mathematics of Design</p></li>
 	<li><p class="future-course"><span>Electrical Engineering 141</span>— Principles of Feedback Control</p></li>
 	<li><p class="future-course"><span>Electrical Engineering 170A</span> — Principles of Photonics</p></li>
-	<li><p class="future-course"><span>Electrical Engineering M117</span> — Computer Networks: Physical Layer</p></li>
+	<li><p><span>Electrical Engineering M117</span> — Computer Networks: Physical Layer</p></li>
 	<li><p class="future-course"><span>Electrical Engineering Design Course x 2</span></p></li>
 	</ul>
 </div>
