--- a/app/views/kfaninc/ee.html.erb
+++ b/app/views/kfaninc/ee.html.erb
@@ -73,6 +73,11 @@
 	<li><p class="future-course"><span>Electrical Engineering Design Course x 2</span></p></li>
 	</ul>
 </div>
+	  <div class="progress-container">
+    <div class="progress-wrap progress" data-progress-percent="70">
+      <div class="progress-bar progress"></div>
+    </div>  
+  </div>
 </div>
 <%= javascript_include_tag "portfolio", "data-turbolinks-track" => true %>
 <%= javascript_include_tag "nav", "data-turbolinks-track" => true %>
